--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.igc.list.IGCRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/refreshLayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+<com.igc.paging.IGCRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                 xmlns:app="http://schemas.android.com/apk/res-auto"
+                                 xmlns:tools="http://schemas.android.com/tools"
+                                 android:id="@+id/refreshLayout"
+                                 android:layout_width="match_parent"
+                                 android:layout_height="match_parent"
+                                 tools:context="com.igc.paging.MainActivity">
     
     <FrameLayout
         android:layout_width="match_parent"
@@ -25,4 +25,4 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center" />
     </FrameLayout>
-</com.igc.list.IGCRefreshLayout>
+</com.igc.paging.IGCRefreshLayout>
