--- a/app/src/main/res/layout/test_item.xml
+++ b/app/src/main/res/layout/test_item.xml
@@ -18,6 +18,16 @@
         app:layout_constraintTop_toTopOf="parent" />
     
     
+    <TextView
+        android:id="@+id/test2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TT"
+        android:textSize="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    
     <View
         android:layout_width="0dp"
         android:layout_height="1px"
