--- a/paginglibrary/src/main/res/layout/paging_load_finish.xml
+++ b/paginglibrary/src/main/res/layout/paging_load_finish.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content">
     
     <TextView
+        android:id="@+id/tvLoadFinish"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:gravity="center"
