--- a/paginglibrary/src/main/res/layout/paging_load_more.xml
+++ b/paginglibrary/src/main/res/layout/paging_load_more.xml
@@ -6,11 +6,13 @@
     android:orientation="horizontal">
     
     <ProgressBar
+        android:id="@+id/pbProgress"
         android:layout_width="14dp"
         android:layout_height="14dp"
         android:indeterminateDrawable="@drawable/load_rotate" />
     
     <TextView
+        android:id="@+id/tvLoading"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_gravity="center"
